[package]
name = "ooo"
version = "0.1.0"
edition = "2021"
description = "Tool to interact with ooo archives"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.5", features = ["derive"] }
flate2 = "1.0.26"
lz4_flex = { version = "0.11.1", default-features = false, features = ["frame"] }
xz2 = { version = "0.1.7", features = ["static"] }
zstd = "0.12.3"
